--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <div style="margin: 10px;">
         <button style="width:100%" disabled class="compare" >Compare</button>
         <div style="margin:10px; width: 100%;" class="resultcompare">Click compare</div>
+        <textarea style="width:100%;height:65%;" class="diff"></textarea>
     </div>
     
     <script type="module" src="loadfiles.js"></script>
