--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             <h3>Load SCL file to compare against</h3>
             <input id="oursinput" type="file"></input>
             <div style="margin:10px" class="oursloadstatus">No SCL loaded</div>
-            <select class="oursselect"></select>
+            <select class="oursselect"><option>--Please choose an IED--</option></select>
             <div style="margin:10px" class="oursdescribestatus">Select IED to generate describe object</div>
             <button disabled class="oursdescload">Download describe object</button>
             <div class="describeours"></div>
@@ -16,7 +16,7 @@
             <h3>Load SCL file to compare to</h3>
             <input id="theirsinput" type="file"></input>
             <div style="margin:10px" class="theirsloadstatus">No SCL loaded</div>
-            <select class="theirsselect"></select>
+            <select class="theirsselect"><option>--Please choose an IED--</option></select>
             <div style="margin:10px" class="theirsdescribestatus">Select IED to generate describe object</div>
             <button disabled class="theirsdescload">Download describe object</button>
             <div class="describetheirs"></div>
