wip: promising bug fixes

--- a/demo/index.html
+++ b/demo/index.html
@@ -29,7 +29,7 @@ function display(description) {
             const sum = document.createElement('summary');
             det.append(sum);
             const d = db[tag][hash];
-            sum.textContent = tag + ' ' + (identity(eDb.h2e.get(hash)) || ' ') + ' (' + hash + ')';
+            sum.textContent = tag + ' ' + (Array.from(eDb.h2e.get(hash)?.keys()?.map(identity)).join(', ') || ' ') + ' (' + hash + ')';
             det.addEventListener('toggle', () => {if (det.children.length < 2) det.append(...display(db[tag][hash]))})
             elements.push(det);
           }
@@ -93,7 +93,7 @@ scl1.addEventListener('change', e => {
               const det = document.createElement('details');
               const sum = document.createElement('summary');
               det.append(sum);
-              sum.textContent = tag + ' ' + (identity(eDb.h2e.get(hash)) || ' ') + ' (' + hash + ')';
+              sum.textContent = tag + ' ' + (Array.from(eDb.h2e.get(hash)?.keys()?.map(identity)).join(', ') || ' ') + ' (' + hash + ')';
               det.addEventListener('toggle', () => {if (det.children.length < 2) det.append(...display(db[tag][hash]))})
               details.append(det);
             }
